# pretix-manualseats

./: .dockerignore  .gitignore  .update-locales.sh  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  publish.yml  style.yml  tests.yml
pretix_manualseats/: apps.py  signals.py  urls.py  views.py
pretix_manualseats/locale/de/LC_MESSAGES/: django.po
pretix_manualseats/locale/de_Informal/LC_MESSAGES/: django.po
pretix_manualseats/static/pretix_manualseats/: assignedseats-edit.js  import-download.js  seating-edit.js
pretix_manualseats/templates/pretix_manualseats/event/: assign.html  import.html  index.html  mapping.html
pretix_manualseats/templates/pretix_manualseats/organizer/: delete.html  form.html  index.html
